--- a/app/views/themes/bioart/layouts/admin.html.haml
+++ b/app/views/themes/bioart/layouts/admin.html.haml
@@ -4,6 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = display_meta_tags :site => 'Bioart Society backoffice'
+    %link{:href => "https://fonts.googleapis.com/css?family=Rubik|Titillium+Web|Abel", :rel => "stylesheet", :type => "text/css"}/
     = stylesheet_link_tag 'bioart/stylesheets/application', media: 'all', 'data-turbolinks-track' => true 
     = stylesheet_link_tag 'bioart/stylesheets/backoffice', media: 'all', 'data-turbolinks-track' => false
     = javascript_include_tag 'bioart/javascripts/application', 'data-turbolinks-track' => true 
