--- a/app/views/themes/bioart/home/about.html.haml
+++ b/app/views/themes/bioart/home/about.html.haml
@@ -16,18 +16,20 @@
       .member_content
         .title= link_to 'Members', page_path('members')
         .excerpt
-          = raw @members.excerpt
+          = raw sanitize(@members.excerpt, tags: %w{br p bold strong b i em underline u})
+
           
     .small-12.medium-6.columns.member_box
       .member_image{style: "background: url(#{@collaborators.image.url}) center/cover no-repeat"}
       .member_content
         .title= link_to 'Collaborators', page_path('collaborators')
         .excerpt
-          = raw @collaborators.excerpt
+          = raw sanitize(@collaborators.excerpt, tags: %w{br p bold strong b i em underline u})
+
           
 
   .row
     .small-12.columns.staff_box
       .text
         .red Board and staff
-        .excerpt= raw @board_staff.body
+        .excerpt= raw sanitize(@board_staff.body, tags: %w{br p bold strong b i em underline u})
