--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -66,7 +66,7 @@
 
 
           .excerpt
-            = raw clean_whitespace(sanitize(@page.body, tags: %w{table tr th td tbody thead img a p br i em bold strong b u}, attr: %w{href target src}))
+            = raw clean_whitespace(sanitize(@page.body, tags: %w{table tr th td tbody thead img a p br i em bold strong b u}, attr: %w{href alt target src}))
   - if @page.postcategory
     .posts_index{class: @project.nil? ? false : :project_detail}
       .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
