--- a/app/assets/themes/bioart/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/themes/bioart/stylesheets/foundation_and_overrides.scss
@@ -25,7 +25,7 @@
 //
 //@include foundation-close-button;
 //@include foundation-drilldown-menu;
-//@include foundation-dropdown;
+@include foundation-dropdown;
 @include foundation-dropdown-menu;
 //@include foundation-responsive-embed;
 //@include foundation-label;
