--- a/app/views/themes/bioart/admin/pages/index.html.haml
+++ b/app/views/themes/bioart/admin/pages/index.html.haml
@@ -17,8 +17,9 @@
     %table.cms
       %thead
         %tr
-          %th= sortable_column "Activity", column: 'subsite'
+          
           %th= sortable_column "Title"
+          %th= sortable_column "Activity/subpages", column: 'subsite'
           %th Body
           %th Image
           %th
@@ -28,16 +29,30 @@
           - next unless page.root?
           %tr
             %td
-              = page.subsite.nil? ? 'main' : page.subsite.name
-              - if page.project
-                %p.project= page.project.name
-            %td
               = page.title
+              
+
+              %p.project
+                = page.node.name
+                = page.subsite.nil? ? '' : " : " + page.subsite.name
+                - if page.project
+                  = " : "
+                  = page.project.name
+            %td
+              
               - unless page.children.empty?
-                %br/
-                - page.children.each do |p|
-                  = link_to p.title, edit_admin_page_path(p), target: :_blank
-                  | 
+                .subpages
+                  %u Subpages
+                
+                  - page.children.each do |p|
+                    .subpage{:'data-toggle' => "page_#{p.id}"}
+                      = p.title
+                    .dropdown-pane[p]{:"data-dropdown" => '', :"data-hover" => "true", :"data-hover-pane" => "true"}
+                      %b= p.title
+                      %br/
+                      = link_to 'Edit page', edit_admin_page_path(p), target: :_blank, class: [:button, :tiny]
+                      %br/
+                      = link_to 'Delete', [:admin, p], method: :delete, data: {confirm: 'Are you sure you want to delete this forever?'}, class: [:button, :tiny, :alert]
             %td= truncate_html(strip_tags(page.body), length: 150)
             %td= image_tag page.image.url(:thumb)
             %td
