--- a/app/views/themes/bioart/calls/show.html.haml
+++ b/app/views/themes/bioart/calls/show.html.haml
@@ -1,12 +1,41 @@
 .opencall_detail{class: @call.slug}
   .row
     .small-12.columns
-      .text
+      
+      .text{class: [@call.photos.empty? ? false : :has_photos]}
         .red= @call.name
         - unless @call.end_at.blank?
           .deadline
             Application deadline
             = l @call.end_at, format: :long
+        - unless @call.photos.empty?
+          - if @call.photos.size == 1
+            .image= image_tag @call.photos.first.image.url(:standard)
+          - else
+            .image_carousel{style: @call.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+          
+              - @call.photos.each do |photo|
+                .slide[photo]
+                  = image_tag photo.image.url(:standard)
+                  .thumb= image_tag photo.image.url(:thumb)
+            = content_for :jquery do
+              :plain
+                $('.image_carousel').slick({infinite: true,
+                  arrows: true,
+                  slide: '.slide',
+      
+                  adaptiveHeight: false,
+                  prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+                  nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
+                  dots: true,
+                  customPaging: function(slick,index) {
+                     return slick.$slides.eq(index).find('.thumb').html() ;
+                  },
+                  variableWidth: false,
+                  autoplay: true,
+                  autoplaySpeed: 2400,
+                  slidesToScroll: 1,
+                });
         .call_text= raw @call.overview
 
   .row
