--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -27,7 +27,7 @@
       %b Photos/image gallery:
       %p Please try to keep all photos to the same aspect ratio, to avoid ugly whitespace gaps in between the images and the thumbnails below.
       = f.fields_for :photos do |ff|
-        = if ff.object.image?
+        - if ff.object.image?
           = image_tag ff.object.image.url(:box)
         = ff.input :image
         = ff.link_to_remove "Remove this photo", class: [:button, :secondary, :alert, :tiny]
