--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -19,6 +19,8 @@
   .row
     .large-5.small-12.columns= f.input :end_at, as: :string,  :input_html => { :class => "fdatepicker", required: ''}, label: 'Deadline'
   .row
+    .small-12.large-6.columns= f.input :add_to_project_menu, as: :boolean    
+  .row
     .small-12.large-6.columns= f.input :published, as: :boolean
   .row
     .small-12.large-9.columns= f.input :overview,  as: :ckeditor, input_html: {required: ''}
