--- a/app/views/themes/bioart/admin/pages/_form.html.haml
+++ b/app/views/themes/bioart/admin/pages/_form.html.haml
@@ -18,7 +18,9 @@
   .row
     .large-5.small-12.columns= f.input :is_project_overview, as: :boolean
   .row
-    .large-5.small-12.columns= f.input :hide_from_menu, as: :boolean    
+    .large-5.small-12.columns= f.input :hide_from_menu, as: :boolean
+  .row
+    .large-5.small-12.columns= f.input :two_columns, as: :boolean, label: 'Split text into two columns on larger-than-mobile screens'
   .row
     .large-8.small-12.columns= f.input :body, as: :text, input_html: {class: :ckeditor}
   .row
