--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -18,55 +18,59 @@
 
   .row
     .small-12.columns
+      .text
+        - if @page.image?
+          .page_image= image_tag @page.image.url.gsub(/development/, 'production')
+        - elsif !@page.photos.empty?
+          .page_image
+            .image_carousel{style: @page.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+  
+              - @page.photos.each do |photo|
+                .slide[photo]
+                  = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
+                  .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
+              = content_for :jquery do
+                :plain
+                  $('.image_carousel').slick({infinite: true,
+                    arrows: true,
+                    slide: '.slide',
+    
+                    adaptiveHeight: false,
+                    prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+                    nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
+                    dots: true,
+                    customPaging: function(slick,index) {
+                       return slick.$slides.eq(index).find('.thumb').html() ;
+                    },
+                    variableWidth: false,
+                    autoplay: true,
+                    autoplaySpeed: 2400,
+                    slidesToScroll: 1,
+                  });
+
       - if @page.split_on_h3 == true
         .grid
           - split_on_h3(@page.body).each do |section|
-            .chunked
-              .box_chunk
-                .box_title= raw section[:title]
-                = raw section[:contents]
-          = content_for :jquery do
-            :plain
-              $('.grid').masonry({
-                // options
-                itemSelector: '.chunked',
-                columnWidth:  '.chunked',
-              });
-              
+            - if section[:larger_title]
+
+              .full_width
+                .large_title= raw section[:larger_title]
+            - elsif section[:title]
+              .chunked
+                .box_chunk
+                  .box_title= raw section[:title]
+                  = raw section[:contents]
+          / = content_for :jquery do
+          /   :plain
+          /     $('.grid').masonry({
+          /       // options
+          /       itemSelector: '.chunked',
+          /       columnWidth:  '.chunked',
+          /     });
       - else
-        .text
-          - if @page.image?
-            .page_image= image_tag @page.image.url.gsub(/development/, 'production')
-          - elsif !@page.photos.empty?
-            .page_image
-              .image_carousel{style: @page.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
-    
-                - @page.photos.each do |photo|
-                  .slide[photo]
-                    = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
-                    .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
-                = content_for :jquery do
-                  :plain
-                    $('.image_carousel').slick({infinite: true,
-                      arrows: true,
-                      slide: '.slide',
-      
-                      adaptiveHeight: false,
-                      prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
-                      nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
-                      dots: true,
-                      customPaging: function(slick,index) {
-                         return slick.$slides.eq(index).find('.thumb').html() ;
-                      },
-                      variableWidth: false,
-                      autoplay: true,
-                      autoplaySpeed: 2400,
-                      slidesToScroll: 1,
-                    });
-
-
-          .excerpt
-            = raw clean_whitespace(sanitize(@page.body, tags: %w{table tr th h2 h3 h4 h5 h6 h1 td tbody thead img a p br i em bold strong b u}, attr: %w{href alt target src}))
+        .excerpt
+          = raw clean_whitespace(sanitize(@page.body, tags: %w{table tr th h2 h3 h4 h5 h6 h1 td tbody thead img a p br i em bold strong b u}, attr: %w{href alt target src}))
+          
   - if @page.postcategory
     .posts_index{class: @project.nil? ? false : :project_detail}
       .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
