--- a/app/assets/themes/bioart/stylesheets/pages.css.scss
+++ b/app/assets/themes/bioart/stylesheets/pages.css.scss
@@ -175,7 +175,7 @@
   }
   .grid {
     .full_width {
-      margin-bottom: 2rem 0 4.5rem 0;
+      margin: 2rem 0 4.5rem 0;
       float: left;
       clear: both;
       width: 100%;
