address footer change

--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -6,9 +6,9 @@
       %p
         Suomen Biotaiteen Seura ry / Finnish Bioart Society
         %br/
-        Kaasutehtaankatu 1
+        Hilda Flodinin aukio 2a 2 
         %br/
-        FI-00540 Helsinki
+        00300 Helsinki Finland
   .small-6.columns.medium-3 &nbsp;
   .small-7.medium-3.columns
     / .form
