don't die if image is blank

--- a/app/views/themes/bioart/admin/frontitems/index.html.haml
+++ b/app/views/themes/bioart/admin/frontitems/index.html.haml
@@ -17,7 +17,7 @@
     - @frontitems.each do |frontitem|
       %tr
         %td
-          = image_tag frontitem.wideimage.url, width: 300
+          = image_tag frontitem.wideimage.url, width: 300 rescue ''
 
         %td= frontitem.smallblurb_text
 
