--- a/app/assets/themes/bioart/stylesheets/pages.css.scss
+++ b/app/assets/themes/bioart/stylesheets/pages.css.scss
@@ -174,6 +174,7 @@
     }
   }
   .grid {
+  
     .full_width {
       margin: 2rem 0 4.5rem 0;
       float: left;
@@ -206,8 +207,8 @@
     background-color: white;
     margin: 0.8rem;
     float: left;
-    max-width: 340px;
-    
+//    max-width: 340px;
+    min-width: 43%;
     .box_chunk {
       .box_title {
         
