--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -18,37 +18,39 @@
 
   .row
     .small-12.columns
-      .text
-        - if @page.image?
-          .page_image= image_tag @page.image.url.gsub(/development/, 'production')
-        - elsif !@page.photos.empty?
-          .page_image
-            .image_carousel{style: @page.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+      - if @page.split_on_h3 != true 
+        .text
+          - if @page.image?
+            .page_image= image_tag @page.image.url.gsub(/development/, 'production')
+          - elsif !@page.photos.empty?
+            .page_image
+              .image_carousel{style: @page.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
   
-              - @page.photos.each do |photo|
-                .slide[photo]
-                  = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
-                  .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
-              = content_for :jquery do
-                :plain
-                  $('.image_carousel').slick({infinite: true,
-                    arrows: true,
-                    slide: '.slide',
+                - @page.photos.each do |photo|
+                  .slide[photo]
+                    = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
+                    .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
+                = content_for :jquery do
+                  :plain
+                    $('.image_carousel').slick({infinite: true,
+                      arrows: true,
+                      slide: '.slide',
     
-                    adaptiveHeight: false,
-                    prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
-                    nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
-                    dots: true,
-                    customPaging: function(slick,index) {
-                       return slick.$slides.eq(index).find('.thumb').html() ;
-                    },
-                    variableWidth: false,
-                    autoplay: true,
-                    autoplaySpeed: 2400,
-                    slidesToScroll: 1,
-                  });
+                      adaptiveHeight: false,
+                      prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+                      nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
+                      dots: true,
+                      customPaging: function(slick,index) {
+                         return slick.$slides.eq(index).find('.thumb').html() ;
+                      },
+                      variableWidth: false,
+                      autoplay: true,
+                      autoplaySpeed: 2400,
+                      slidesToScroll: 1,
+                    });
 
       - if @page.split_on_h3 == true
+
         .grid
           - split_on_h3(@page.body).each do |section|
             - if section[:larger_title]
@@ -60,13 +62,13 @@
                 .box_chunk
                   .box_title= raw section[:title]
                   = raw section[:contents]
-          / = content_for :jquery do
-          /   :plain
-          /     $('.grid').masonry({
-          /       // options
-          /       itemSelector: '.chunked',
-          /       columnWidth:  '.chunked',
-          /     });
+          = content_for :jquery do
+            :plain
+              $('.grid').masonry({
+                // options
+                itemSelector: '.chunked',
+                columnWidth:  '.chunked',
+              });
       - else
         .text
           .excerpt
