--- a/app/views/themes/hybrid_matters/layouts/activities.html.haml
+++ b/app/views/themes/hybrid_matters/layouts/activities.html.haml
@@ -5,7 +5,7 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = display_meta_tags :site => 'HYBRID MATTERs', og: {image: "http://#{request.host}#{image_path('hm_logo.png')}" }
     = stylesheet_link_tag 'hybrid_matters/stylesheets/application', media: 'all'
-    = javascript_include_tag 'hybrid_matters/javscripts/', 'data-turbolinks-track' => true 
+    = javascript_include_tag 'hybrid_matters/javascripts/application'
     %script{:src => "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key}", :type => "text/javascript"}
     = csrf_meta_tags
     %link{:href => "/posts.rss", :rel => "alternate", :title => "RSS", :type => "application/rss+xml"}/
